# VirtualWaterMaze

./: .gitignore  CardBoardAppState.cpp  README.txt  abc.txt  build.bat  build.gradle  new1.txt  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md
.run-2/: build, run and heat map.run.xml
Desktop/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Desktop/nbproject/private/: private.properties
Desktop/src/com/spatial/learning/jme/: Main.java  SpatialTask.java
android/: settings.gradle
android/app/: build.gradle
android/app/libs/: Readme.md  nblibraries.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com.spatial.learning.jme/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com.spatial.learning.jme/android/: AndroidLauncher.java
app/src/main/res/layout/: activity_main.xml  calibrate_fragment_layout.xml  fragment_calibrate.xml  fragment_start.xml  permission_not_granted.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
cardboard/: build.gradle
cardboard/src/main/cpp/: CMakeLists.txt  CardboardRenderer.cpp
desktop/: build.gradle
docs/: Readme.md  index.html  index.js  style.css
game/: build.gradle
game/src/main/resources/Models/: scene.glb  scene.mtl
game/src/main/resources/Models/blend/: Tower.blend  Tower.blend1  copter.blend  flag.blend  parachute.blend  planet.blend  tree.blend
game/src/main/resources/Textures/Gimp/: Untitled.xcf
game/src/main/resources/models/: scene.glb
game/src/main/resources/models/Castle/: Castle.glb
game/src/main/resources/models/Copter/: Copter.glb
gradle/wrapper/: gradle-wrapper.properties
heat_map_generator/: heat_map_generator.py  heatmapgenerator.py
random_generator/: __init__.py  data.csv  locs.csv  plot.py  random_generator.py  starts.csv
sdk/: CMakeLists.txt  build.gradle
vrdesktop/: build.gradle
(+54 files in other folders)
